--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -1,6 +1,6 @@
 /*Redeveloped
 Lab: Software Engineering
-Exp:Identifying Domain Classes from the Problem Statements
+Exp:Statechart and Activity Modeling
 File Name: main.css
 Author: Prakriti Dhang */
 
@@ -58,258 +58,7 @@ div.divscroll {
    background-color: transparent;
 }
 
-#m1{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
 
-#m2{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m3{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m4{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m5{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m6{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m7{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m8{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m9{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m10{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m11{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m12{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m13{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-#m14{
-    
-  color: black;
-  animation-name:highlighttext;
-  animation-duration: 3s;
-animation-timing-function: linear;
-animation-delay: 0s;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: forwards;
-animation-play-state: paused;
-background-color: none;
-background: linear-gradient(90deg, yellow 49%, rgba(255, 255, 255, 0) 50%);
-background-size: 200% 100%;
-background-position: 100% 0;
-}
-
-
-
-
-@-webkit-keyframes highlighttext {
-  to {
-    background-position: 0 0;
-  }
-}
-
-@keyframes highlighttext {
-  to {
-    background-position: 0 0;
-  }
-  }
 
 
   .list-group-item{
